Fix: Se arreglan observaciones de SonarQube.